--- a/lib/realtime_web/live/product_live/show.html.heex
+++ b/lib/realtime_web/live/product_live/show.html.heex
@@ -1,7 +1,5 @@
-<h1>Show Product</h1>
-
-<strong>Name:</strong>
-<%= @product.name %>
+<h1>Welcome, <%= @user.name %></h1>
+<h2><%= @product.name %></h2>
 
 <strong>Sku:</strong>
 <%= @product.sku %>
@@ -9,4 +7,6 @@
 <strong>Stock level:</strong>
 <%= @product.stock_level %>
 
-<button phx-click="add_to_cart">Add to Cart</button>
+<button phx-click="add_to_cart" disabled={elem(@button_state, 0)}><%=elem(@button_state, 1)%></button>
+
+<%= live_patch "View Cart", to: Routes.cart_show_path(@socket, :show, user_id: @user.id, user_name: @user.name) %>
