--- a/lib/realtime_web/live/better_cart_live/show.html.heex
+++ b/lib/realtime_web/live/better_cart_live/show.html.heex
@@ -1,4 +1,8 @@
 Welcome, <%= @user.name %>
+<span>
+  <%= if @countdown_time do %><div>You have <%= @countdown_time %> left to checkout</div><% end %>
+</span>
+
 <ul>
   <%= for item <- @items do %>
     <li>
@@ -8,7 +12,7 @@ Welcome, <%= @user.name %>
   <% end %>
 
   <%= if Enum.empty?(@items) do %>
-    There's nothing here. Check out a <%= live_patch "product", to: Routes.product_show_path(@socket, :show, "scarce-scarf", user_id: @user.id, user_name: @user.name) %>
+    There's nothing here. Check out a <%= live_patch "product", to: Routes.better_product_show_path(@socket, :show, "rare-raincoat", user_id: @user.id, user_name: @user.name) %>
   <% else %>
     <button phx-click="checkout">Checkout!</button>
   <% end %>
