--- a/lib/realtime_web/live/post_live/index.html.heex
+++ b/lib/realtime_web/live/post_live/index.html.heex
@@ -1,35 +1,15 @@
 <style>
 
-li.show {
-  animation: openspace .3s ease forwards,
-  fade-in-animation .3s .3s cubic-bezier(0,.8,.32,1.07) forwards;
-  animation-iteration-count: 1;
-}
-
-@keyframes openspace {
-    to {
-        height: auto;
-    }
-}
-
-@keyframes fade-in-animation {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
 </style>
 
 <ul style="list-style-type: none;">
   <%= for post <- @posts do %>
-    <li class="">
-      <b style="font-size: 12px;"><%= post.author %></b> <span style="font-size: 12px;" ><%= post.relevance %>%</span>
+    <li>
+      <b style="font-size: 12px;"><%= post.author %></b>
+      <span style="font-size: 12px;" ><%= elem(post.location, 2) %>, <%= elem(post.location, 3) %></span>
+      <span style="font-size: 12px; background-color:#9B74E8; color: white; font-weight: bold; padding: 2px 7px; border-radius: 10px;" ><%= post.relevance %>%</span>
       <p>
         <%= post.content %>
-        <span><%= elem(post.location, 2) %>, <%= elem(post.location, 3) %></span>
       </p>
     </li>
   <% end %>
